# task_app

./: README.md  docker-compose.yml  example_task_app_env
backend/: .gitignore  (+1 more)
backend-djangorest/: docker-compose.yml
backend-djangorest/api/src/: manage.py  pyproject.toml  unversioned-requirements.txt
backend-djangorest/api/src/authentication/: exceptions.py
backend-djangorest/api/src/authentication/api/serializers/: code_serializers.py  jwt_serializers.py  user_serializers.py
backend-djangorest/api/src/authentication/migrations/: 0003_alter_user_full_name_alter_user_username.py
backend-djangorest/api/src/authentication/templates/authentication/notifications/en/: account_verification_code_subject.txt
backend-djangorest/api/src/authentication/tests/: test_pass_reset.py  test_user_post.py
backend-djangorest/api/src/core/: exceptions.py
backend-djangorest/api/src/locale/es/LC_MESSAGES/: django.po
backend/djangorest/src/: .coveragerc  celery_beat_entrypoint.sh  celery_worker_entrypoint.sh  private.key  public.key  pyproject.toml
backend/djangorest/src/authentication/: admin.py  models.py
backend/djangorest/src/authentication/api/serializers/: code_serializers.py  user_serializers.py  utils.py
backend/djangorest/src/authentication/api/views/: code_views.py  jwt_views.py
backend/djangorest/src/authentication/migrations/: 0002_alter_user_email.py
backend/djangorest/src/authentication/tests/: test_pass_reset.py  test_throttling.py  test_user_model.py  test_user_post.py
backend/djangorest/src/core/: asgi.py  permissions.py  settings.py
backend/djangorest/src/core/swagger/: urls.py
backend/djangorest/src/core/tests/: utils.py
backend/djangorest/src/tasks/api/: serializers.py  urls.py  views.py
backend/djangorest/src/tasks/tests/: test_permission.py
(+273 files in other folders)
