[tool.poetry]
name = "task-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "task_app"}]

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
django-environ = "^0.11.2"
django-stubs = "^4.2.6"
django-configurations = "^2.5"
django-filter = "^23.3"
django-cors-headers = "^4.3.1"
drf-yasg = "^1.21.7"
djangorestframework-simplejwt = "^5.3.0"
pyjwt = "^2.8.0"
cryptography = "^41.0.5"
pillow = "^10.1.0"
celery = "^5.3.5"
django-celery-results = "^2.5.1"
psycopg2-binary = "^2.9.9"
coverage = "^7.3.2"
django-celery-beat = "^2.5.0"
redis = "^5.0.1"
cod = "^0.0.4"
gunicorn = "^21.2.0"
pycryptodome = "^3.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
